assessment_handout.txt
Write in one or more topics for each question using the following topics: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class. If you get any error messages, copy and paste up to three of them in the boxes below.

#1 Topic:_____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:



#2 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:



#3 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:
 File "assessment.py", line 29
    for x in range(7, negUser,-1)
                                ^
SyntaxError: invalid syntax




#4 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:



#5 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:



#6 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:



#7 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:
Traceback (most recent call last):
  File "assessment.py", line 86, in <module>
    prob7()
  File "assessment.py", line 85, in prob7
    print(book_collection.book1[0])
AttributeError: 'list' object has no attribute 'book1'



#8 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)




#9 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:



#10 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)

Error Messages:


